[tool.poetry]
name = "ps-kafka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ps_kafka"}]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.0.2"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
